# itmo_cpp_1st_year

./: README.md
labwork1/: CMakeLists.txt  main.cpp
labwork10/: .gitignore  CMakeLists.txt  README.md
labwork10/lib/: CMakeLists.txt  weather.cpp  weather.h
labwork11/: CMakeLists.txt  README.md
labwork11/lib/: CMakeLists.txt  funcs.h  xrange.h  zip.h
labwork11/tests/: CMakeLists.txt  tests.cpp
labwork12/: CMakeLists.txt  README.md
labwork12/lib/: CMakeLists.txt  CutSQL.cpp  CutSQL.h
labwork12/tests/: CMakeLists.txt  tests.cpp
labwork2/: CMakeLists.txt  README.md
labwork2/lib/: number.cpp  number.h
labwork2/tests/: CMakeLists.txt  number_test.cpp
labwork3/: CMakeLists.txt  README.md
labwork3/lib/: CMakeLists.txt  sand_heap.cpp  sand_heap.h  to_bmp.cpp  to_bmp.h
labwork5/: CMakeLists.txt  README.md
labwork5/lib/: ArgParser.cpp  ArgParser.h
labwork5/tests/: argparser_test.cpp
labwork6/: README.md
labwork6/lib/: parser.cpp  parser.h
labwork6/tests/: test_format.cpp  test_parser.cpp
labwork7/: CMakeLists.txt  README.md
labwork7/lib/: CMakeLists.txt  id3v2.cpp  id3v2.h
labwork8/: CMakeLists.txt  README.md
labwork8/lib/: CCircularBuffer.h  CIterator.h  CMakeLists.txt
labwork8/tests/: CMakeLists.txt  tests.cpp
labwork9/: CMakeLists.txt  README.md
labwork9/lib/: CMakeLists.txt  CPoolAllocator.cpp  CPoolAllocator.h
